@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 9;
+use Test::More tests => 15;
 
 use HTML::FormFu;
 
@@ -31,6 +31,32 @@ $form->element('Text')->name('baz');
     $form->process( {
             foo => '',
             bar => '',
+            baz => '',
+        } );
+
+    ok( $form->valid('foo'), 'foo valid' );
+    ok( $form->valid('bar'), 'bar valid' );
+    ok( $form->valid('baz'), 'baz valid' );
+}
+
+# Valid
+{
+    $form->process( {
+            foo => '',
+            bar => 'yada',
+            baz => 'boba',
+        } );
+
+    ok( $form->valid('foo'), 'foo valid' );
+    ok( $form->valid('bar'), 'bar valid' );
+    ok( $form->valid('baz'), 'baz valid' );
+}
+
+# Valid
+{
+    $form->process( {
+            foo => '',
+            bar => 'yada',
             baz => '',
         } );
 
